[metadata]
name = randseal
version = 0.0.1
author = Guard Boi
author_email = guard@cow.futbol
description = Generates a seal image and outputs it as a discord.File
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True